# neuronbox

./: Cargo.toml  LICENSE  LICENSE-MIT  LICENSING.md  README.md  neuronbox-mvp.md  rust-toolchain.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/scripts/: demo_dashboard.sh  demo_dashboard_showcase.py  neuronbox_daemon_session.py  serve_worker.py
cli/sdk/neuronbox/: __init__.py  _hooks.py  sitecustomize.py
cli/specs/: model-aliases.json
cli/src/: daemon_client.rs  daemon_spawn.rs  env_hash.rs  main.rs  model_alias.rs  model_resolve.rs  neuron_config.rs  paths.rs  sdk_path.rs
cli/src/commands/: dashboard.rs  dashboard_demo.rs  doctor.rs  gpu_cmd.rs  host_cmd.rs  init.rs  lock.rs  mod.rs  model.rs  oci_cmd.rs  pull.rs  run.rs  serve.rs  stats.rs  swap.rs  welcome.rs
cli/src/oci/: docker_run.rs  mod.rs  runc_prepare.rs
cli/src/store/: mod.rs  model_store.rs  registry.rs
cli/src/ui/: mod.rs  theme.rs
docs/: CLI_UX.md  GPU_VRAM.md  MULTI_GPU.md  OCI_AND_DOCKER.md  SECURITY.md
runtime/: Cargo.toml
runtime/src/: gpu.rs  gpu_manager.rs  lib.rs  main.rs  model_loader.rs  protocol.rs  server.rs  vram_watch.rs
runtime/src/host/: apple.rs  mod.rs  nvidia.rs  nvml_linux.rs  probe.rs  rocm.rs  snapshot.rs
runtime/tests/: socket_integration.rs
sdk/: pyproject.toml
sdk/neuronbox/: __init__.py  _hooks.py  client.py
specs/: daemon-sessions.md  neuron.yaml.schema.json  swap-signal.schema.json
specs/examples/: finetune.yaml  inference.yaml  local-model.yaml
