[package]
name = "neuronbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
default = []
# Enable NVML in the runtime (Linux NVIDIA); little effect on macOS.
nvml = ["neuronbox-runtime/nvml"]

[[bin]]
name = "neuron"
path = "src/main.rs"

[dependencies]
neuronbox-runtime = { version = "0.1.1", path = "../runtime" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
hex = "0.4"
hf-hub = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "6"
ratatui = "0.30.0"
crossterm = "0.29.0"
