[package]
name = "neuronbox-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
default = []
# Linux NVIDIA: NVML (libnvidia-ml.so) with nvidia-smi fallback if unavailable.
nvml = ["dep:nvml-wrapper"]

[lib]
name = "neuronbox_runtime"
path = "src/lib.rs"

[[bin]]
name = "neurond"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
nvml-wrapper = { version = "0.12", optional = true }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
